fix : 증상 메시지로 반환